<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="Main.">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Swtich"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/boxshape"
        android:fontFamily="@font/alata"
        android:onClick="encryptionButtonClick"
        android:text="@string/advanced_encryption_standard"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Key">

        <Button
            android:id="@+id/Encrypt_Buuton"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/boxshape"
            android:fontFamily="@font/alata"
            android:onClick="encryptionButtonClick"
            android:text="@string/encrypt"
            android:textColor="#FFFFFF"
            android:textSize="19sp" />

        <Button
            android:id="@+id/Decrypt_Buuton"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/boxshape"
            android:fontFamily="@font/alata"
            android:onClick="encryptionButtonClick"
            android:text="@string/decrypt"
            android:textColor="#FFFFFF"
            android:textSize="19sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/TextArea"
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/boxshape"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:hint="@string/enter_your_message_here"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Swtich" />

    <EditText
        android:id="@+id/Key"
        android:layout_width="263dp"
        android:layout_height="66dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/boxshape"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:hint="@string/key"
        android:maxLength="30"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextArea" />

    <TextView
        android:id="@+id/Answer"
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/boxshape"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:padding="10dp"
        android:hint="@string/your_output_gonna_be_here"
        android:inputType="textMultiLine"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/Matrix"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/boxshape"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:padding="10dp"
        android:hint="@string/your_matrix_key_gonna_be_here"
        android:inputType="textMultiLine"
        android:textColor="#FFFFFF"
        android:visibility="gone"
        android:textColorHint="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/Play_Fair_VALUE"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginBottom="98dp"
        android:background="@drawable/boxshape"
        android:gravity="center"
        android:hint="@string/your_output_gonna_be_here"
        android:inputType="textMultiLine"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:fontFamily="@font/alata"
        android:visibility="gone"

        android:textColorHint="@color/White"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Matrix"
        tools:ignore="TextViewEdits" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/copy_button"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/boxshape"
            android:fontFamily="@font/alata"
            android:onClick="encryptionButtonClick"
            android:text="@string/copy"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/boxshape"
            android:fontFamily="@font/alata"
            android:onClick="encryptionButtonClick"
            android:text="@string/reset"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>