<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ConstraintLayout"
    android:background="#FFFFFF"
    tools:context="Main.">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Swtich"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/boxshape"
        android:fontFamily="@font/alata"
        android:onClick="HashButtonClick"
        android:text="MD5"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/TextArea"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/boxshape"
        android:gravity="center"
        android:hint="@string/enter_your_message_here"
        android:padding="20dp"
        android:inputType="textMultiLine"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Swtich" />

    <EditText
        android:id="@+id/salt"
        android:layout_width="300dp"
        android:layout_height="63dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/boxshape"
        android:gravity="center"
        android:hint="Salt"
        android:maxLength="10"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextArea" />

    <TextView
        android:id="@+id/Answer"
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/boxshape"
        android:gravity="center"
        android:hint="@string/your_output_gonna_be_here"
        android:inputType="textMultiLine"
        android:textColorHint="#FFFFFF"
        android:padding="20dp"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hash_Buuton"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/hash_Buuton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/boxshape"
        android:onClick="HashButtonClick"
        android:text="@string/hash"
        android:textSize="19sp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salt" />

    <Button
        android:id="@+id/copy_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/boxshape"
        android:onClick="encryptionButtonClick"
        android:text="@string/copy"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Matrix"
        app:layout_constraintEnd_toStartOf="@+id/reset_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Answer" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/boxshape"
        android:onClick="encryptionButtonClick"
        android:text="@string/reset"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Matrix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/copy_button"
        app:layout_constraintTop_toBottomOf="@+id/Answer"
        tools:ignore="UnknownIdInLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>